--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,7 +5,17 @@
   margin: 0 auto;
 }
 
+.h2 {
+  color: white;
+  font-weight: 700;
+}
+
 .h3 {
+  color: white;
+  font-weight: 600;
+}
+
+.h6 {
   color: white;
   font-weight: 600;
 }
